--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,20 +2,35 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-
-    {
-      "type": "wpilib",
-      "name": "WPILib Desktop Debug",
-      "request": "launch",
-      "desktop": true,
-    },
-    {
-      "type": "wpilib",
-      "name": "WPILib roboRIO Debug",
-      "request": "launch",
-      "desktop": false,
-    }
-  ]
-}
+  
+    "version": "0.2.0",
+    "configurations": [
+      {
+        "type": "java",
+        "name": "Main",
+        "request": "launch",
+        "mainClass": "frc.robot.Main",
+        "projectName": "FRC_2024"
+      },
+      {
+        "type": "java",
+        "name": "networktablestestingrev1",
+        "request": "launch",
+        "mainClass": "frc.robot.subsystems.notevision.networktablestestingrev1",
+        "projectName": "FRC_2024"
+      },
+      {
+        "type": "wpilib",
+        "name": "WPILib Desktop Debug",
+        "request": "launch",
+        "desktop": true
+      },
+      {
+        "type": "wpilib",
+        "name": "WPILib roboRIO Debug",
+        "request": "launch",
+        "desktop": false
+      }
+    ]
+  }
+  
